// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrafficEventTable should match snapshot 1`] = `
<Section
  hasMargin={false}
>
  <H5>
    Hits By Resource
  </H5>
  <p
    className="is-italic mb-4"
  >
    A breakdown of the endpoints that your application(s) have sent requests to (grouped by resource)
  </p>
  <FadeIn>
    <Table
      bordered={true}
      columns={
        Array [
          Object {
            "Footer": "Total",
            "Header": "Resource",
            "accessor": "endpoint",
            "columnProps": Object {
              "className": "capitalize",
            },
          },
          Object {
            "Footer": [Function],
            "Header": "Hits",
            "accessor": "requestCount",
          },
        ]
      }
      data={
        Array [
          Object {
            "endpoint": "properties",
            "requestCount": 90,
          },
          Object {
            "endpoint": "propertyImages",
            "requestCount": 88,
          },
        ]
      }
      maxHeight={450}
      scrollable={true}
    />
  </FadeIn>
</Section>
`;

exports[`TrafficEventTable should match snapshot if data is empty 1`] = `
<Section
  hasMargin={false}
>
  <H5>
    Hits By Resource
  </H5>
  <p
    className="is-italic mb-4"
  >
    A breakdown of the endpoints that your application(s) have sent requests to (grouped by resource)
  </p>
  <FadeIn>
    <Table
      bordered={true}
      columns={
        Array [
          Object {
            "Footer": "Total",
            "Header": "Resource",
            "accessor": "endpoint",
            "columnProps": Object {
              "className": "capitalize",
            },
          },
          Object {
            "Footer": [Function],
            "Header": "Hits",
            "accessor": "requestCount",
          },
        ]
      }
      data={Array []}
      maxHeight={450}
      scrollable={true}
    />
  </FadeIn>
</Section>
`;

exports[`TrafficEventTable should match snapshot when loading 1`] = `<Loader />`;
